resolve spacing issue around <PulseCircle />

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,5 +1,5 @@
 .descriptionArea {
-  div {
+  & > div {
     @apply mb-6;
   }
   
